--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Captain Ads</string>
     <!-- message -->
     <string name="message_quitback">Zum Verlassen erneut drücken</string>
-    <string name="message_interstitial_available">Verfügbare Interstitial-Anzeigen</string>
-    <string name="message_interstitial_unavailable">Nicht verfügbare Interstitial-Anzeigen</string>
+    <string name="message_interstitial_available">Verfügbare interstitial-anzeigen</string>
+    <string name="message_interstitial_unavailable">Nicht verfügbare interstitial-anzeigen</string>
 </resources>
