--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Captain Ads</string>
     <!-- message -->
     <string name="message_quitback">再按一次退出</string>
-    <string name="message_interstitial_available">Available interstitial Ads</string>
+    <string name="message_interstitial_available">可用的非页内广告</string>
     <string name="message_interstitial_unavailable">可用的非页内广告</string>
 </resources>
